[project]
name = "archigraph"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/vincentfs/ComfyUI-ArchiGraph"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-ArchiGraph"
Icon = ""
