[project]
name = "archigraph"
description = "Implementation of architectural related graph algorithm in ComfyUI."
version = "0.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/vincentfs/ComfyUI-ArchiGraph"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "vincentfs"
DisplayName = "ComfyUI-ArchiGraph"
Icon = ""
